# i3d-shoplifting

./: .gitignore  README.md  copilot-report.md  pyproject.toml
src/common/: dataset.py
src/i3d_shoplifting/dataset/: dataset.py
src/i3d_shoplifting/inference/: __init__.py  evaluate.py
src/i3d_shoplifting/models/: i3d_pytorch.py
src/i3d_shoplifting/preprocessing/: extract_DSCASS.py  gen_optical_flow.py  sample_event_blocks_i3d.py
src/i3d_shoplifting/training/: __init__.py  find_max_batch_size.py  train.py
src/models/: i3d_pytorch.py
src/preprocessing/: extract_DSCASS.py  extract_others.py  gen_optical_flow.py  sample_event_blocks_i3d.py
src/training/: evaluate.py  evaluate_experiments.py  find_max_batch_size.py  full_report.py  metrics_view.py  test_model_loading.py  train.py
