[project]
name = "i3d-shoplifting"
version = "0.1.0"
description = "Fine tuning I3D for binary shoplifting classification"
requires-python = ">=3.11,<3.12"
dependencies = [
    "natsort>=8.4.0",
    "numpy>=2.3.1",
    "opencv-contrib-python>=4.11.0.86",
    "torch>=2.9,<3.0",
    "torchvision>=0.24,<0.25",
]

[project.optional-dependencies]
dev = [
    "pandas",
    "tqdm",
    "natsort",
    "matplotlib",
    "scikit-learn",
    "seaborn",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
